// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[Contrib] elements/<Checkbox /> should match snapshot 1`] = `
.c0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  display: inline-block;
  text-align: center;
  line-height: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: inherit;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 8px;
  padding-bottom: 8px;
  color: white;
  background-color: primary;
  border: 0;
  border-radius: 4px;
}

.c2 {
  cursor: default;
  width: 1rem !important;
}

.c1 {
  background-color: transparent;
  border-radius: 0.125rem;
  color: white;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 0.9375rem;
  font-weight: 600;
  margin-right: 0;
  min-height: 1.25rem;
  min-width: 1.25rem;
  opacity: 1;
  padding: 0.3rem 1rem 0.3rem;
  white-space: nowrap;
}

.c1:hover {
  opacity: 1;
}

.c1 svg {
  cursor: pointer;
  height: 1rem;
  margin-right: 0;
  padding-top: 0;
  width: 1rem;
}

<div>
  <button
    class="c0 c1"
    role="checkbox"
  >
    <svg
      aria-hidden="true"
      class="svg-inline--fa fa-square fa-w-14 fa-1x c2"
      color="var(--color-lapis-lazuli)"
      data-icon="square"
      data-prefix="fas"
      focusable="false"
      role="img"
      viewBox="0 0 448 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M400 32H48C21.5 32 0 53.5 0 80v352c0 26.5 21.5 48 48 48h352c26.5 0 48-21.5 48-48V80c0-26.5-21.5-48-48-48z"
        fill="currentColor"
      />
    </svg>
  </button>
</div>
`;

exports[`[Contrib] elements/<Checkbox /> should match snapshot with \`isChecked\` prop 1`] = `
.c0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  display: inline-block;
  text-align: center;
  line-height: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: inherit;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 8px;
  padding-bottom: 8px;
  color: white;
  background-color: primary;
  border: 0;
  border-radius: 4px;
}

.c2 {
  cursor: default;
  width: 1rem !important;
}

.c1 {
  background-color: transparent;
  border-radius: 0.125rem;
  color: white;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 0.9375rem;
  font-weight: 600;
  margin-right: 0;
  min-height: 1.25rem;
  min-width: 1.25rem;
  opacity: 1;
  padding: 0.3rem 1rem 0.3rem;
  white-space: nowrap;
}

.c1:hover {
  opacity: 1;
}

.c1 svg {
  cursor: pointer;
  height: 1rem;
  margin-right: 0;
  padding-top: 0;
  width: 1rem;
}

<div>
  <button
    class="c0 c1"
    role="checkbox"
  >
    <svg
      aria-hidden="true"
      class="svg-inline--fa fa-check-square fa-w-14 fa-1x c2"
      color="var(--color-lapis-lazuli)"
      data-icon="check-square"
      data-prefix="fas"
      focusable="false"
      role="img"
      viewBox="0 0 448 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M400 480H48c-26.51 0-48-21.49-48-48V80c0-26.51 21.49-48 48-48h352c26.51 0 48 21.49 48 48v352c0 26.51-21.49 48-48 48zm-204.686-98.059l184-184c6.248-6.248 6.248-16.379 0-22.627l-22.627-22.627c-6.248-6.248-16.379-6.249-22.628 0L184 302.745l-70.059-70.059c-6.248-6.248-16.379-6.248-22.628 0l-22.627 22.627c-6.248 6.248-6.248 16.379 0 22.627l104 104c6.249 6.25 16.379 6.25 22.628.001z"
        fill="currentColor"
      />
    </svg>
  </button>
</div>
`;

exports[`[Contrib] elements/<Checkbox /> should match snapshot with a custom \`color\` prop 1`] = `
.c0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  display: inline-block;
  text-align: center;
  line-height: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: inherit;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 8px;
  padding-bottom: 8px;
  color: white;
  background-color: primary;
  border: 0;
  border-radius: 4px;
}

.c2 {
  cursor: default;
  width: 1rem !important;
}

.c1 {
  background-color: transparent;
  border-radius: 0.125rem;
  color: var(--color-eerie-black);
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 0.9375rem;
  font-weight: 600;
  margin-right: 0;
  min-height: 1.25rem;
  min-width: 1.25rem;
  opacity: 1;
  padding: 0.3rem 1rem 0.3rem;
  white-space: nowrap;
}

.c1:hover {
  opacity: 1;
}

.c1 svg {
  cursor: pointer;
  height: 1rem;
  margin-right: 0;
  padding-top: 0;
  width: 1rem;
}

<div>
  <button
    class="c0 c1"
    role="checkbox"
  >
    <svg
      aria-hidden="true"
      class="svg-inline--fa fa-square fa-w-14 fa-1x c2"
      color="var(--color-periwinkle)"
      data-icon="square"
      data-prefix="fas"
      focusable="false"
      role="img"
      viewBox="0 0 448 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M400 32H48C21.5 32 0 53.5 0 80v352c0 26.5 21.5 48 48 48h352c26.5 0 48-21.5 48-48V80c0-26.5-21.5-48-48-48z"
        fill="currentColor"
      />
    </svg>
  </button>
</div>
`;
